--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -48,7 +48,10 @@
     }},
 
   "message.updatedFromLegacy.description": { "message": "Tree Style Tab is now reborn based on WebExtensions technologies for Firefox 57 and later. Its vertical tab bar is available as one of choosable sidebar panels. If you don't see it yet, hit the \"F1\" key or click the \"Tree Style Tab\" button in the toolbar, to activate the Tree Style Tab sidebar panel." },
-  "message.updatedFromLegacy.migrateSessions": { "message": "Tree structure of tabs is not migrated automatically. See <a href=\"https://github.com/piroor/treestyletab/wiki/How-to-convert-session-information-from-old-TST-0.19.x-to-new-TST-2.x\">the instruction for manual migration of tree information</a>." },
+  "message.updatedFromLegacy.migrateSessions.before": { "message": "Tree structure of tabs is not migrated automatically. See " },
+  "message.updatedFromLegacy.migrateSessions.link.label": { "message": "the instruction for manual migration of tree information" },
+  "message.updatedFromLegacy.migrateSessions.after": { "message": "." },
+  "updatedFromLegacy.migrateSessions.link.uri": { "message": "https://github.com/piroor/treestyletab/wiki/How-to-convert-session-information-from-old-TST-0.19.x-to-new-TST-2.x" },
 
 
   "context.reloadTree.label": { "message": "Reload this Tree" },
@@ -167,7 +170,6 @@
   "config.importedTreeStructureFromLegacy.label": { "message": "Migration of Old Tree" },
   "config.migrateSessionStore.before":     { "message": "See" },
   "config.migrateSessionStore.link.label": { "message": "the instruction for manual migration of tree information" },
-  "config.migrateSessionStore.link.uri":   { "message": "https://github.com/piroor/treestyletab/wiki/How-to-convert-session-information-from-old-TST-0.19.x-to-new-TST-2.x" },
   "config.migrateSessionStore.after":      { "message": "also." },
   "config.migrateLegacyTreeStructure.label": { "message": "Migrate tree of tabs at the next startup" },
   "config.importedTreeStructureFromLegacy.placeholder": { "message": "Paste migration data for old tree here" },
