--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -203,6 +203,9 @@
 
   "config.requestPermissions.bookmarks": { "message": "Allow to create bookmarks" },
 
+  "config.requestPermissions.fallbackToToolbarButton.title": { "message": "Click the \"Tree Style Tab\" toolbar button" },
+  "config.requestPermissions.fallbackToToolbarButton.message": { "message": "Due to Firefox's bug, you cannot request permission from this screen. Please click the \"Tree Style Tab\" toolbar button to grant permissions." },
+
   "config.all.caption": { "message": "All Configs" },
 
 
