--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -202,6 +202,7 @@
   "config.maximumAcceptableDelayForTabDuplication.after": { "message": "milliseconds or more." },
 
   "config.requestPermissions.bookmarks": { "message": "Allow to create bookmarks" },
+  "config.requestPermissions.allUrls":   { "message": "Don't expand collapsed tree while switching focus of tabs via keyboard shortcuts. (*You need to allow executing scripts on webpages.)" },
 
   "config.requestPermissions.fallbackToToolbarButton.title": { "message": "Click the \"Tree Style Tab\" toolbar button" },
   "config.requestPermissions.fallbackToToolbarButton.message": { "message": "Due to Firefox's bug, you cannot request permission from this screen. Please click the \"Tree Style Tab\" toolbar button to grant permissions." },
