--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -201,6 +201,7 @@
   "config.maximumAcceptableDelayForTabDuplication.after": { "message": "ミリ秒以内にタブの複製を完了できなかった場合は処理を中断する" },
 
   "config.requestPermissions.bookmarks": { "message": "ブックマークの作成を許可する" },
+  "config.requestPermissions.allUrls":   { "message": "キーボードショートカットでのタブ切り替え中、折り畳まれたツリーを展開しない（※Webページ内でのスクリプトの実行を許可する必要があります）" },
 
   "config.requestPermissions.fallbackToToolbarButton.title": { "message": "ツールバーの「ツリー型タブ」ボタンをクリックして下さい" },
   "config.requestPermissions.fallbackToToolbarButton.message": { "message": "Firefoxのバグのため、権限をこの画面から要求することができません。ツールバー上の「ツリー型タブ」ボタンをクリックして権限を承認して下さい。" },
