--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -63,6 +63,12 @@
   "message.startup.requestPermissions.bookmarks": { "message": "\"Bookmark This Tree\" in the context menu on tabs (requires accessing to bookmarks.)" },
   "message.startup.requestPermissions.allUrls":   { "message": "Don't expand collapsed tree while switching focus of tabs via keyboard shortcuts (requires script injection to webpages for detection of keyboard operations.)" },
 
+  "message.startup.userChromeCss.notify": { "message": "?" },
+  "message.startup.userChromeCss.description.1": { "message": "Due to restrictions of WebExtensions, Tree Style Tab cannot control Firefox's top tab bar and the sidebar header. If you need to control them, see " },
+  "message.startup.userChromeCss.description.link.label": { "message": "customization examples by userChrome.css" },
+  "message.startup.userChromeCss.description.link.uri": { "message": "https://github.com/piroor/treestyletab/wiki/Code-snippets-for-custom-style-rules#for-userchromecss" },
+  "message.startup.userChromeCss.description.2": { "message": "." },
+
 
   "context.reloadTree.label": { "message": "Reload this Tree" },
   "context.reloadDescendants.label": { "message": "Reload Descendants" },
