--- a/webextensions/_locales/ja/messages.json
+++ b/webextensions/_locales/ja/messages.json
@@ -89,6 +89,11 @@
   "config.sidebarPosition.right": { "message": "右側用" },
   "config.sidebarPosition.description": { "message": "※この設定はサイドバー自体の位置を変更しません。サイドバーをウィンドウの右側に移動するには、サイドバーのヘッダ上の切り替えメニューから「サイドバーを右側に移動」を選択して下さい。" },
 
+  "config.scrollbarMode.caption": { "message": "スクロールバーの表示" },
+  "config.scrollbarMode.default": { "message": "通常表示" },
+  "config.scrollbarMode.narrow":  { "message": "細く表示" },
+  "config.scrollbarMode.hide":    { "message": "なし" },
+
   "config.style.caption": { "message": "テーマ" },
   "config.style.plain": { "message": "Plain" },
   "config.style.plain-dark": { "message": "Plain Dark" },
