--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -61,7 +61,7 @@
 
   "message.startup.requestPermissions.description": { "message": "⚠There are some features requiring extra permissions. If you hope to activate them, please grant permissions manually." },
   "message.startup.requestPermissions.bookmarks": { "message": "\"Bookmark This Tree\" in the context menu on tabs (requires access to bookmarks.)" },
-  "message.startup.requestPermissions.allUrls":   { "message": "Don't expand collapsed tree while switching focus of tabs via keyboard shortcuts (requires script injection to webpages for detection of keyboard operations.)" },
+  "message.startup.requestPermissions.allUrls":   { "message": "Don't expand collapsed tree and skip collapsed descendants, while switching focus of tabs via keyboard shortcuts (requires script injection to webpages for detection of keyboard operations.)" },
 
   "message.startup.userChromeCss.notify": { "message": "How to hide top tab bar and sidebar header?" },
   "message.startup.userChromeCss.description.1": { "message": "Due to restrictions of WebExtensions, Tree Style Tab cannot control Firefox's top tab bar and the sidebar header. If you need to control them, see " },
@@ -222,7 +222,7 @@
   "config.maximumAcceptableDelayForTabDuplication.after": { "message": "milliseconds or more." },
 
   "config.requestPermissions.bookmarks": { "message": "Allow to create bookmarks" },
-  "config.requestPermissions.allUrls":   { "message": "Don't expand collapsed tree while switching focus of tabs via keyboard shortcuts. (*You need to allow executing scripts on webpages.)" },
+  "config.requestPermissions.allUrls":   { "message": "Don't expand collapsed tree and skip collapsed descendants, while switching focus of tabs via keyboard shortcuts. (*You need to allow executing scripts on webpages.)" },
 
   "config.requestPermissions.fallbackToToolbarButton.title": { "message": "Click the \"Tree Style Tab\" toolbar button" },
   "config.requestPermissions.fallbackToToolbarButton.message": { "message": "Due to Firefox's bug, you cannot request permission from this screen. Please click the \"Tree Style Tab\" toolbar button to grant permissions." },
