Add "Default" container to open new tab with default container intentionally

--- a/webextensions/_locales/en/messages.json
+++ b/webextensions/_locales/en/messages.json
@@ -18,6 +18,7 @@
     }},
   "tabbar.newTabButton.tooltip": { "message": "Open a new tab" },
   "tabbar.newTabWithContexualIdentity.tooltip": { "message": "New Container Tab" },
+  "tabbar.newTabWithContexualIdentity.default": { "message": "Default" },
 
   "groupTab.label": { "message": "$TITLE$ and more",
     "placeholders": {
